--- a/public/index.html
+++ b/public/index.html
@@ -25,17 +25,12 @@
       </div>
 
       <div class="content">
-           <p>Full-Stack Developer</p>
-           <p>Founder of <b><a href="http://www.teamvenus.org/" target="_blank">Team Venus</a></b></p>
+           <h3>Full-Stack Developer</h3>
+           <p>Founder of <b><a href="http://www.teamvenus.org/" target="_blank">Team Venus</a></b>, Coordinator at <b><a href="http://www.hackath10.com" target="_blank">Hackath10</a></b> and SEO at <b><a href="http://3gen.tech" target="_blank">3Gen</a></b></p>
            
 
            <div class="about">
-                <p>
-                    Hello I am Emre Emir Kılıç. I live in Trabzon / Turkey. I have been programming for 4 years. During this period, I worked in Web, Game, Desktop, Console, Mobile App and Robotic Development. 
-                    <br>
-                    <br>
-                    I am the Founder of <a href="http://www.teamvenus.org" target="_blank">Team Venus</a>, Coordinator at <a href="http://www.hackath10.com" target="_blank">Hackath10</a> and SEO at <a href="http://3gen.tech" target="_blank">3Gen</a> 
-                </p>
+                <p>Hello I am Emre Emir Kılıç. I live in Trabzon / Turkey. I have been programming for 4 years. During this period, I worked in Web, Game, Desktop, Console, Mobile App and Robotic Development.</p>
            </div>
            <p>C, C++, C#, PHP, HTML, CSS, JavaScript, Java, Python, SQL</p>
            <p>All rights reserved. Design by <b><a href="https://www.eek.ninja/#">Emre Emir Kılıç</a></b></p>
