--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
                 <p>Hello I am Emre Emir Kılıç. I live in Trabzon / Turkey. I have been programming for 4 years. During this period, I worked in Web, Game, Desktop, Console, Mobile App and Robotic Development.</p>
            </div>
            <p>C, C++, C#, PHP, HTML, CSS, JavaScript, Java, Python, SQL</p>
-           <p>All rights reserved. Design by <b><a href="https://www.eek.ninja/#">Emre Emir Kılıç</a></b></p>
+           <p><span onclick="abdullah()">All</span> rights reserved. Design by <b><a href="https://www.eek.ninja/#" id="copyright">Emre Emir Kılıç</a></b></p>
       </div>
            
       <div class="social">
@@ -44,5 +44,6 @@
       </center> 
       </div>       
     </div>
+    <script src="./js/index.js"></script>
   </body>
 </html>
