--- a/public/index.html
+++ b/public/index.html
@@ -47,3 +47,52 @@
     <script src="./js/index.js"></script>
   </body>
 </html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Emre Emir Kılıç</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <script defer src="/__/firebase/8.2.1/firebase-app.js"></script>
+    <script defer src="/__/firebase/8.2.1/firebase-auth.js"></script>
+    <script defer src="/__/firebase/8.2.1/firebase-database.js"></script>
+    <script defer src="/__/firebase/8.2.1/firebase-firestore.js"></script>
+    <script defer src="/__/firebase/8.2.1/firebase-functions.js"></script>
+    <script defer src="/__/firebase/8.2.1/firebase-messaging.js"></script>
+    <script defer src="/__/firebase/8.2.1/firebase-storage.js"></script>
+    <script defer src="/__/firebase/8.2.1/firebase-analytics.js"></script>
+    <script defer src="/__/firebase/8.2.1/firebase-remote-config.js"></script>
+    <script defer src="/__/firebase/8.2.1/firebase-performance.js"></script>
+    <script defer src="/__/firebase/init.js?useEmulator=true"></script>
+  </head>
+  <body>
+    <div class="main">
+      <div class="me">
+           <img src="./img/emreemirkilic.jpeg" id="self">
+           <h2>Emre Emir Kılıç</h2>
+      </div>
+
+      <div class="content">
+           <h3>Full-Stack Developer</h3>
+           <p>Founder of <b><a href="http://www.teamvenus.org/" target="_blank">Team Venus</a></b>, Coordinator at <b><a href="http://www.hackath10.com" target="_blank">Hackath10</a></b> and SEO at <b><a href="http://3gen.tech" target="_blank">3Gen</a></b></p>
+           
+
+           <div class="about">
+                <p>Hello I am Emre Emir Kılıç. I live in Trabzon / Turkey. I have been programming for 4 years. During this period, I worked in Web, Game, Desktop, Console, Mobile App and Robotic Development.</p>
+           </div>
+           <p>C, C++, C#, PHP, HTML, CSS, JavaScript, Java, Python, SQL</p>
+           <p><span onclick="abdullah()">All</span> rights reserved. Design by <b><a href="https://www.eek.ninja/#" id="copyright">Emre Emir Kılıç</a></b></p>
+      </div>
+           
+      <div class="social">
+      <center>
+           <a href="https://www.linkedin.com/in/emre-emir-kılıç-3a989b170" target="_blank"><img src="./img/linkedin.svg" width="30"></a>
+           <a href="https://www.instagram.com/eek.js/" target="_blank"><img src="./img/instagram.svg" width="30"></a>
+           <a href="https://www.twitter.com/walkeriyecrew/" target="_blank"><img src="./img/twitter.svg" width="30"></a>
+      </center> 
+      </div>       
+    </div>
+    <script src="./js/index.js"></script>
+  </body>
+</html>
