--- a/public/ada/index.html
+++ b/public/ada/index.html
@@ -45,7 +45,7 @@
                 position: inherit; 
                 margin: auto; 
                 margin-top: 350px; 
-                background-color: #1f1b24; 
+                background-color: #121212; 
                 padding: 15px; 
                 padding-top: 30px;
                 border-radius: 5px;
