adayi cok seviyorum

--- a/public/ada/index.html
+++ b/public/ada/index.html
@@ -46,6 +46,9 @@
                 margin: auto; 
                 margin-top: 350px; 
                 background-color: #121212; 
+                border: 1px solid #3700b3;
+                border-bottom: 8px solid #3700b3;
+                box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
                 padding: 15px; 
                 padding-top: 30px;
                 border-radius: 5px;
