--- a/public/ada/index.html
+++ b/public/ada/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Adayı eve atma sitesi</title>
+        <title>eekada</title>
         <meta charset="utf-8">
     </head>
     <body bgcolor="#1f1b24">
